# practica-dms-2021-2022

./: README.md
Manuales/: ConsideracionesDiseño.md  Instalacion.md  PatronArquitectonico.md
Memoria/: DiseñoBackend.md  DiseñoFrontend.md  ProtocoloComunicaciones.md
Memoria/3ª Entrega/: DiseñoFrontend.md
Memoria/3ª Entrega/Manuales/: Uso.md
Memoria/Manuales/: Instalacion.md  Uso.md
components/dms2122auth/dms2122auth/openapi/: spec.yml
components/dms2122backend/: MANIFEST.in  setup.cfg
components/dms2122backend/dms2122backend/data/config/: backendconfiguration.py
components/dms2122backend/dms2122backend/data/db/: question.py  schema.py
components/dms2122backend/dms2122backend/data/db/exc/: __init__.py  questionexisterror.py  questionnotfounderror.py
components/dms2122backend/dms2122backend/data/db/orm/: :memoryAnswer:  prototype.py  schema.py  test.py  test2.py  test3.py
components/dms2122backend/dms2122backend/data/db/orm/results/: __init__.py  answer.py  question.py  user.py  userrole.py  usersession.py
components/dms2122backend/dms2122backend/data/db/results/: __init__.py  answer.py  question.py
components/dms2122backend/dms2122backend/data/db/resultsets/: __init__.py  answers.py  questions.py
components/dms2122backend/dms2122backend/logic/: __init__.py
components/dms2122backend/dms2122backend/openapi/: spec.yml
components/dms2122backend/dms2122backend/presentation/rest/: answer.py  question.py  security.py  server.py
components/dms2122backend/dms2122backend/service/: __init__.py  answerservices.py  questionservices.py
(+39 files in other folders)
