[metadata]
name = dms2122backend
version = attr: dms2122backend.VERSION
description = DMS 2021-2022 backend service
long_description = file: README.md
keywords = dms, ubu, backend, service
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
scripts =
    bin/dms2122backend
install_requires = sqlalchemy; requests; dms2122common; jinja2<3.0; pyyaml<6; connexion[swagger-ui];
